Use Float.valueOf(float) instead of deprecated Float(double) constructor